--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1,4 +1,4 @@
-// Custom style SASS | Vladimir Popkov Studio ©2023 | https://vk.com/vladimir_popkov | For WikiLiq Ads Manager | feat. Alexander & Vlad | Based on Bulma CSS Framework
+// Custom style SASS | Vladimir Popkov Studio ©2023 | https://vk.com/vladimir_popkov | For WikiLiq Ads Manager | feat. Alexander & Vlad
 @charset "utf-8"
 // Base Colors
 $liq-red: #ff2f2f
