--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -90,6 +90,11 @@ a
 	&:hover
 		color: $liq-red
 // Components
+.notification-area
+	position: fixed
+	max-width: 30vw
+	right: .75rem
+	bottom: 3rem
 .tabs:not(:last-child)
 	margin-bottom: 0
 .tab-content
