--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -66,6 +66,7 @@ $link: $liq-blue
 body
 	font-family: 'Roboto', sans-serif
 	background-color: #fafafa
+	min-height: calc(100vh - $navbar-height)
 h1, h2, h3, h4, h5, h6
 	font-weight: 400
 h2
