--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -32,7 +32,7 @@ $warning: $liq-yellow
 $danger: $liq-red
 $link: $liq-blue
 // Base
-@import "../node_modules/bulma/bulma.sass"
+@import "../../node_modules/bulma/bulma.sass"
 // Shadows
 =base-shadow
 	-webkit-box-shadow: 0rem 0.25rem 0.95rem 0rem rgba(0,0,0,0.3)
