Modify Gulp tasks

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -32,6 +32,7 @@ $warning: $liq-yellow
 $danger: $liq-red
 $link: $liq-blue
 // Base
+@import "fonts.sass"
 @import "../../node_modules/bulma/bulma.sass"
 // Shadows
 =base-shadow
