Add products screen

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -97,6 +97,19 @@ a
 	color: $liq-blue
 	&:hover
 		color: $liq-red
+#my-products-screen
+	.box
+		.title
+			font-size: $size-6
+		.table
+			font-size: $size-7
+		.product-image img
+			width: auto
+			max-height: 256px
+		.product-description
+			font-size: .85rem
+			font-weight: 200
+
 // Components
 .main-content-section
 	display: none
@@ -114,6 +127,9 @@ a
 .ad-image img
 	width: auto
 	max-height: 64px
+.product-image img
+	width: auto
+	max-height: 256px
 
 .tile-icon
 	color: $grey
