Add some buttons

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -114,7 +114,7 @@ a
 .main-content-section
 	display: none
 	&.is-active
-		display: flex
+		display: block
 .button-image
 	padding: .75rem
 	cursor: pointer
