--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -109,7 +109,14 @@ a
 		.product-description
 			font-size: .85rem
 			font-weight: 200
-
+// Elements
+input[type=checkbox]
+	-ms-transform: scale(1.5)
+	-moz-transform: scale(1.5)
+	-webkit-transform: scale(1.5)
+	-o-transform: scale(1.5)
+	transform: scale(1.5)
+	margin: .5rem .5rem .5rem .25rem
 // Components
 .main-content-section
 	display: none
