--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -137,6 +137,26 @@ input[type=checkbox]
 .product-image img
 	width: auto
 	max-height: 256px
+
+.brand-image
+	+transition
+	&:hover::before
+		content: "Edit brand"
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		background-color: rgba(255, 255, 255, 0.9)
+		display: flex
+		align-items: center
+		justify-content: center
+		font-size: 1.25rem
+		color: $black-bis
+		opacity: 0
+	&:hover::before
+		opacity: 1
+
 .image-loader
 	cursor: pointer
 	display: flex
@@ -207,3 +227,9 @@ input[type=checkbox]
 	display: none
 	&.is-active
 		display: block
+.modal-card-foot
+	.level
+		a
+			color: $black
+			&:hover
+				color: $liq-red
