--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -118,6 +118,9 @@ input[type=checkbox]
 	transform: scale(1.5)
 	margin: .5rem .5rem .5rem .25rem
 // Components
+#freeDatesCalendar
+	max-width: 310px
+	margin: 0 auto 1.5rem
 .main-content-section
 	display: none
 	&.is-active
