--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -149,6 +149,8 @@ input[type=checkbox]
 #freeDatesCalendar
 	max-width: 310px
 	margin: 0 auto 1.5rem
+	.jsCalendar-selected
+		border: 2px solid $liq-green
 .main-content-section
 	display: none
 	&.is-active
